--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -27,21 +27,21 @@
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Note Book" /> <!--Added alt tag of notebook-->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Lap Top" /> <!--Added alt tag of notebook-->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Lap Top, hands and different shapes" /> <!--Added alt tag of Laptop, hands and different shapes-->
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,21 +51,21 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Dollar Sign" id="bio-image"> <!--Added alt tag of Dollar Sign and id tag to the image-->
+            <img src="./assets/images/lead-generation.png" alt="Symbol with dollar sign in it" /> <!--Added alt tag of symbol with a dollar sign in it-->
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Light Bulb"id="bio-image"> <!--Added alt tag of Light Bulb Sign and id tag to the image-->
+            <img src="./assets/images/brand-awareness.png" alt="Lightbulb" /> <!--Added alt tag of lightbulb-->
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="3 Dollar SIgns"id="bio-image"> <!--Added alt tag of 3 Dollar Signs and id tag to the image-->
+            <img src="./assets/images/cost-management.png" alt="Three dollar signs" /> <!--removed closing img tag, added alt tag of 3 dollar signs-->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
