Changed the div head to just head

--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -3,24 +3,18 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>website</title> 
+    <link rel="stylesheet" href="./assets/css/style.css"> <!--placed the link to the style.css sheet to the bottom of the head -->
 </head>
 
 <body>
-    <div class="header">
+    <header>   <!--changed the div head opening tag to just a regular header tag-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+    </header>   <!--changed the div head closing tag to just a regular header tag-->  
             <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
+                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>      <!--Made each list item one row-->
+                <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
         </div>
     </div>
