--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="hero"></div>
-    <div class="content">
+    <section>                           <!--changed div class content to just section-->
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Note Book" /> <!--Added alt tag of notebook-->
             <h2>Search Engine Optimization</h2>
@@ -41,8 +41,8 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
-    <div class="benefits">
+    </section>                  <!--changed the div class closing tag to a closing section tag-->
+    <aside>                     <!--div class benefit got changed to the aside tag-->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Symbol with dollar sign in it" /> <!--Added alt tag of symbol with a dollar sign in it-->
@@ -64,13 +64,13 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
-    <div class="footer">
+    </aside>                <!--div class benefit closing tag got changed to closing aside tag-->
+    <footer>                <!--div class footer got changed to just footer-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>               <!--closing tag got changed to a closing footer tag-->
 </body>
 
 </html>
