--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -11,13 +11,15 @@
     <header>   <!--changed the div head opening tag to just a regular header tag-->
         <h1>Hori<span class="seo">seo</span>n</h1>
     </header>   <!--changed the div head closing tag to just a regular header tag-->  
+    <section>   <!--took out the div and added a section-->
             <ul>
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>      <!--Made each list item one row-->
                 <li><a href="#online-reputation-management">Online Reputation Management</a></li>
                 <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+                
             </ul>
-        </div>
-    </div>
+    </section>
+    
     <div class="hero"></div>
     <section>                           <!--changed div class content to just section-->
         <div class="search-engine-optimization">
