--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -11,17 +11,19 @@
     <header>   <!--changed the div head opening tag to just a regular header tag-->
         <h1>Hori<span class="seo">seo</span>n</h1>
     </header>   <!--changed the div head closing tag to just a regular header tag-->  
-    <section>   <!--took out the div and added a section-->
+
+    <section id= "links">   <!--took out the div and added a section with an id of links-->
+        <div>
             <ul>
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>      <!--Made each list item one row-->
                 <li><a href="#online-reputation-management">Online Reputation Management</a></li>
                 <li><a href="#social-media-marketing">Social Media Marketing</a></li>
                 
             </ul>
+        </div>
     </section>
-    
-    <div class="hero"></div>
-    <section>                           <!--changed div class content to just section-->
+
+    <section id="hero">                           <!--changed div class content to section with an id of hero-->
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Note Book" /> <!--Added alt tag of notebook-->
             <h2>Search Engine Optimization</h2>
@@ -44,7 +46,7 @@
             </p>
         </div>
     </section>                  <!--changed the div class closing tag to a closing section tag-->
-    <aside>                     <!--div class benefit got changed to the aside tag-->
+    <section>                     <!--div class benefit got changed to the section tag-->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Symbol with dollar sign in it" /> <!--Added alt tag of symbol with a dollar sign in it-->
@@ -66,7 +68,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </aside>                <!--div class benefit closing tag got changed to closing aside tag-->
+    </section>                <!--div class benefit closing tag got changed to closing section tag-->
     <footer>                <!--div class footer got changed to just footer-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
@@ -76,3 +78,5 @@
 </body>
 
 </html>
+
+   
